--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ ADMIN_PASSWORD=admin123
 COOKIE_PASSWORD=some-secret-password
 
 # Assets
-LOGO_URL=http://localhost:5000/Images/Logos/IlmProLandscapeWhite.png
+LOGO_URL=https://fyp-frontend-rouge.vercel.app/Images/Logos/IlmProLandscapeWhite.png
 
 # CORS
 CORS_ORIGIN=https://fyp-frontend-rouge.vercel.app
